--- a/src/Header/Dots.css
+++ b/src/Header/Dots.css
@@ -1,6 +1,6 @@
 .dots {
     position: relative;
-    color: #f9ebdf;
+    color: #f0f0f0;
     font-size: 12vh;
     line-height: 55%;
     margin-left: 10px;
