--- a/src/Header/Lines.css
+++ b/src/Header/Lines.css
@@ -1,6 +1,6 @@
 .lines {
     position: relative;
-    color: #f9ebdf;
+    color: #f0f0f0;
     font-size: 12vh;
     line-height: 50%;
     margin-left: 90%;
